tests/paczka1/fuzzy1/21477080.err
Error in line 4: A756 A756 19,7
Error in line 5: ZIGQXro A756 35,2
Error in line 12: h7xmcP S334 49,6
Error in line 1: I91QSUGax A250 72,9
Error in line 14: I91QSUGax A756 85,1
Error in line 13: h7xmcP A756 2,4
Error in line 15: I91QSUGax A250 76,5
Error in line 26: A0jc1lwIN S334 24,3
Error in line 28: I91QSUGax S334 157,4
Error in line 29: 7fNP A404 61,0
Error in line 34: 7fNP A756 13,4
Error in line 37: I91QSUGax A404 92,2
